--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,12 @@ header .learn-more:hover {
 	width: 100px;
 	height: 100px;
 	text-align: center;
-	line-height: 96px;
+	line-height: 100px;
+}
+
+#work .fa-css3::before {
+	position: relative;
+	left: 1px;
 }
 
 #work p{
